<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar4"
            title="@string/title_activity_radios_nuevo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppBarStyle" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_holder" />

            <LinearLayout
                android:id="@+id/infoNominativo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/puesto"
                    android:textSize="@dimen/subtitle_1"
                    android:theme="@style/subtitle1" />

                <TextView
                    android:id="@+id/tvNominativo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/subtitle_1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/infoSaliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guardia_aliente"
                    android:textSize="@dimen/subtitle_1"
                    android:theme="@style/subtitle1" />

                <TextView
                    android:id="@+id/tvGuardiaSaliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/agregar_suministro"
                    android:textSize="@dimen/subtitle_1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/infoEntrante"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guardia_entrante"
                    android:textSize="@dimen/subtitle_1"
                    android:theme="@style/subtitle1" />

                <TextView
                    android:id="@+id/tvGuardiaEntrante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/agregar_suministro"
                    android:textSize="@dimen/subtitle_1" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comentario"
                android:textSize="@dimen/subtitle_1"
                android:theme="@style/subtitle1" />

            <EditText
                android:id="@+id/tvComentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit_text"
                android:gravity="top"
                android:hint="@string/hint_escriba_comentario"
                android:lines="3"
                android:maxLength="500" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suinistros"
                android:theme="@style/subtitle1"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvInventarioRelevo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="afterDescendants"
                android:focusable="false"
                android:scrollbars="vertical" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/confirm_suministros_relevo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/shape_button"
                    android:text="@string/btn_cancel"
                    android:theme="@style/buttonBlue" />

                <Button
                    android:id="@+id/ok_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:text="@string/confirmar"
                    android:theme="@style/buttonBlue" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>